--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -1,7 +1,7 @@
 extends ../_template
 
 block variables
-  - var title = 'Home page'
+  - var title = 'Артем Боюр'
 
 block content
-  include ../common/_greating
+  include ../common/_welcome
