DZ2 add authorization (Not finished)

--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -5,4 +5,4 @@ body {
 @import '_misc/stylesheet';
 @import '_misc/font-awesome';
 @import '_misc/adjustment';
-@import 'common/welcome';
+@import 'pages/start';
