--- a/source/style/common/welcome.scss
+++ b/source/style/common/welcome.scss
@@ -1,37 +1,4 @@
-.wrapper-welcome {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  min-width: 0;
-  text-align: center;
-  background-image: url("../img/welcome/bg.jpg");
-  background-size: cover;
-
-  &:after {
-    content: "";
-    display: inline-block;
-    vertical-align: middle;
-    height: 100%;
-    width: 0;
-  }
-}
-
-.welcome-block {
-  display: inline-block;
-  vertical-align: middle;
-  position: relative;
-  width: 380px;
-  opacity: 0.85;
-  background-color: #fcfcfc;
-  border-radius: 5px;
-  padding-top: 40px;
-  text-align: center;
-  overflow: hidden;
-}
-
-.welcome-block__avatar {
+.welcome__avatar {
   display: inline-block;
   height: 140px;
   width: 140px;
@@ -43,22 +10,22 @@
   margin-bottom: 10px;
 }
 
-.welcome-block__title {
+.welcome__title {
   font-family: robotomedium, serif;
   font-size: 28px;
   line-height: 1.2;
   color: #455a64;
 }
 
-.welcome-block__text {
+.welcome__text {
   font-family: robotoregular, serif;
   font-size: 16px;
   line-height: 1.5;
   color: rgba(69, 90, 100, 0.8);
 }
 
-.welcome-block__social {
-  padding: 30px 0 85px;
+.welcome__social {
+  padding: 30px 0;
   font-family: fontawesomeregular, serif;
   font-size: 28px;
 
@@ -76,59 +43,5 @@
     &:hover {
       opacity: 1;
     }
-  }
-}
-
-.welcome-block__btns {
-  display: table;
-  position: absolute;
-  width: 100%;
-  height: 45px;
-  background: #00bfa5;
-  bottom: 0;
-}
-
-.welcome-block__btn {
-  display: table-cell;
-  vertical-align: middle;
-  height: 100%;
-  padding: 0 30px;
-  color: white;
-  transition: 0.5s;
-  text-decoration: none;
-
-  border-right: 1px solid rgba(255, 255, 255, 0.5);
-  border-left: 1px solid rgba(255, 255, 255, 0.5);
-
-  &:first-child {
-    border-left: 0;
-  }
-
-  &:last-child {
-    border-right: 0;
-  }
-
-  &:hover {
-    background: #009688;
-  }
-}
-
-.auth-btn {
-  display: inline-block;
-  position: absolute;
-  right: 100px;
-  top: 24px;
-  color: white;
-
-  font-family: robotoregular, serif;
-  font-size: 16px;
-  padding: 12px 28px;
-  border: 1px solid white;
-  border-radius: 5px;
-
-  text-decoration: none;
-
-  &:hover {
-    background: rgba(255, 255, 255, 0.2);
   }
 }
