--- a/source/template/common/_welcome.pug
+++ b/source/template/common/_welcome.pug
@@ -1,19 +1,17 @@
-.wrapper-welcome
-  .welcome-block
-    .welcome-block__avatar
-    .welcome-block__title.
-      Артем Боюр
-    .welcome-block__text.
-      Личный сайт веб разработчика
-    .welcome-block__social
-        a(href='#')
-          i(class="fa fa-vk" aria-hidden="true")
-        a(href='#')
-          i(class="fa fa-github-alt" aria-hidden="true")
-        a(href='#')
-          i(class="fa fa-linkedin-square" aria-hidden="true")
-    .welcome-block__btns
-      a(href='#').welcome-block__btn Мои работы
-      a(href='#').welcome-block__btn Обо мне
-      a(href='#').welcome-block__btn Блог
-a(href='#').auth-btn Авторизоваться
+.start
+  .welcome__avatar
+  .welcome__title.
+    Артем Боюр
+  .welcome__text.
+    Личный сайт веб разработчика
+  .welcome__social
+      a(href='#')
+        i(class="fa fa-vk" aria-hidden="true")
+      a(href='#')
+        i(class="fa fa-github-alt" aria-hidden="true")
+      a(href='#')
+        i(class="fa fa-linkedin-square" aria-hidden="true")
+  .start__btns
+    a(href='#').start__btn Мои работы
+    a(href='#').start__btn Обо мне
+    a(href='#').start__btn Блог
