add block authorization

--- a/source/style/common/authorization.scss
+++ b/source/style/common/authorization.scss
@@ -4,6 +4,7 @@
   font-size: 35px;
   line-height: 1.2;
   color: #455a64;
+  margin-bottom: 20px;
 
   &:after, &:before {
     display: inline-block;
@@ -23,7 +24,7 @@
   height: 45px;
   border-radius: 5px;
   background-color: #ffffff;
-  margin: 20px auto;
+  margin: 10px auto 20px;
   text-align: left;
   overflow: hidden;
 }
@@ -59,6 +60,83 @@
   }
 }
 
-.start__btn--auth {
-  width: 50%;
+.radio-text {
+  font-family: robotomedium, serif;
+  color: rgba(69, 90, 100, 0.8);
+  line-height: 2;
+  margin: 10px 10px 0 10px;
+}
+
+// Custom checkbox
+.checkbox{
+  box-sizing: border-box;
+  font-family: robotoregular, serif;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  color: rgba(69, 90, 100, 0.8);
+
+  label:before {
+    font-family: FontAwesome, serif;
+    display: inline-block;
+    font-size: 13px;
+    text-align: center;
+    line-height: 22px;
+    content: "\00a0";
+    border-radius: 2px;
+    background-color: #ffffff;
+    border: solid 1px #cccccc;
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+  }
+
+  input[type=checkbox] {
+    display: none;
+
+    &:checked + label:before {
+      content: "\f00c";
+      color: #f3f3f3;
+      background-color: #00bfa5;
+      border: solid 1px transparent;
+    }
+  }
+}
+
+.radio{
+  box-sizing: border-box;
+  font-family: robotoregular, serif;
+  font-size: 16px;
+  text-align: center;
+  color: rgba(69, 90, 100, 0.8);
+
+  label:before {
+    font-family: FontAwesome, serif;
+    display: inline-block;
+    font-size: 30px;
+    text-align: center;
+    line-height: 19px;
+    content: "\00a0";
+    border-radius: 12px;
+    background-color: #ffffff;
+    border: solid 1px #cccccc;
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    vertical-align: text-bottom;
+  }
+
+  input[type=radio] {
+    display: none;
+
+    &:checked + label:before {
+      content: "\2022";
+      color: #00bfa5;
+      background-color: #ffffff;
+    }
+  }
+
+  label {
+    margin: 0 17px;
+  }
 }
