--- a/source/style/common/welcome.scss
+++ b/source/style/common/welcome.scss
@@ -7,7 +7,7 @@
   overflow: hidden;
   background-image: url("../img/welcome/avatar.jpg");
   background-size: cover;
-  margin-bottom: 10px;
+  margin: 10px;
 }
 
 .welcome__title {
@@ -25,7 +25,7 @@
 }
 
 .welcome__social {
-  padding: 30px 0;
+  padding: 30px 0 0;
   font-family: fontawesomeregular, serif;
   font-size: 28px;
 
