edit auth and start page add js rotate

--- a/source/template/common/_authorization.pug
+++ b/source/template/common/_authorization.pug
@@ -1,4 +1,4 @@
-.start
+.authorization#auth_block
   .authorization__title.
     Авторизуйтесь
   .authorization__login
@@ -23,5 +23,5 @@
 
 
   .start__btns
-    a(href='#').start__btn.start__btn--auth На главную
+    a(href='#').start__btn.start__btn--auth#welcome_btn На главную
     a(href='#').start__btn.start__btn--auth Войти
