--- a/source/style/common/authorization.scss
+++ b/source/style/common/authorization.scss
@@ -1,3 +1,9 @@
+.authorization {
+  display: none;
+  transition: 0.5s;
+  transform: scaleX(0);
+}
+
 .authorization__title {
   display: inline-block;
   font-family: bernier_regularregular, serif;
@@ -113,9 +119,9 @@
   label:before {
     font-family: FontAwesome, serif;
     display: inline-block;
-    font-size: 30px;
+    font-size: 32px;
     text-align: center;
-    line-height: 19px;
+    line-height: 18px;
     content: "\00a0";
     border-radius: 12px;
     background-color: #ffffff;
