--- a/source/template/common/_welcome.pug
+++ b/source/template/common/_welcome.pug
@@ -1,17 +1,17 @@
 .welcome#welcome_block
-  .welcome__avatar
-  .welcome__title.
-    Артем Боюр
-  .welcome__text.
-    Личный сайт веб разработчика
-  .welcome__social
-      a(href='#')
-        i(class="fa fa-vk" aria-hidden="true")
-      a(href='#')
-        i(class="fa fa-github-alt" aria-hidden="true")
-      a(href='#')
-        i(class="fa fa-linkedin-square" aria-hidden="true")
-  .start__btns
-    a(href='#').start__btn Мои работы
-    a(href='#').start__btn Обо мне
-    a(href='#').start__btn Блог
+    .user__avatar
+    .user__title.user__title--black Артем Боюр
+    .user__text.user__text--black Личный сайт веб разработчика
+
+    .welcome__social
+        a(href='#')
+            i(class="fa fa-vk" aria-hidden="true")
+        a(href='#')
+            i(class="fa fa-github-alt" aria-hidden="true")
+        a(href='#')
+            i(class="fa fa-linkedin-square" aria-hidden="true")
+
+    .start__btns
+        a(href='works.html').start__btn Мои работы
+        a(href='#').start__btn Обо мне
+        a(href='#').start__btn Блог
