--- a/source/template/common/_authorization.pug
+++ b/source/template/common/_authorization.pug
@@ -1,6 +1,5 @@
 .authorization#auth_block
-  .authorization__title.
-    Авторизуйтесь
+  .authorization__title.title-dashes Авторизуйтесь
   .authorization__login
     .login__icon
       i(class="fa fa-user" aria-hidden="true")
