--- a/source/template/common/_welcome.pug
+++ b/source/template/common/_welcome.pug
@@ -1,5 +1,6 @@
 .welcome#welcome_block
     .user__avatar
+        img.user__avatar-img(src="assets/img/welcome/avatar.jpg")
     .user__title.user__title--black Артем Боюр
     .user__text.user__text--black Личный сайт веб разработчика
 
