--- a/source/style/_misc/adjustment.scss
+++ b/source/style/_misc/adjustment.scss
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+}
+
 html, body {
   width: 100%;
   height: 100%;
@@ -11,4 +15,10 @@ li, ul {
 input {
   border: 0;
   padding: 0;
+}
+
+.wrapper {
+  min-height: 100%;
+  overflow: hidden;
+  position: relative;
 }
