--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -1,8 +1,8 @@
-body {
-  margin: 0;
-}
+
 
 @import '_misc/stylesheet';
 @import '_misc/font-awesome';
 @import '_misc/adjustment';
+@import '_misc/blocks';
 @import 'pages/start';
+@import 'pages/works';
