--- a/source/style/common/authorization.scss
+++ b/source/style/common/authorization.scss
@@ -6,22 +6,11 @@
 
 .authorization__title {
   display: inline-block;
-  font-family: bernier_regularregular, serif;
+  position: relative;
   font-size: 35px;
+  font-family: bernier_regularregular, serif;
   line-height: 1.2;
   color: #455a64;
-  margin-bottom: 20px;
-
-  &:after, &:before {
-    display: inline-block;
-    content: '';
-    width: 22px;
-    height: 5px;
-    opacity: 0.2;
-    background-color: #373e42;
-    vertical-align: middle;
-    margin: 20px;
-  }
 }
 
 .authorization__login, .authorization__pass {
@@ -119,15 +108,15 @@
   label:before {
     font-family: FontAwesome, serif;
     display: inline-block;
-    font-size: 32px;
+    font-size: 28px;
     text-align: center;
-    line-height: 18px;
+    line-height: 20px;
     content: "\00a0";
-    border-radius: 12px;
+    border-radius: 13px;
     background-color: #ffffff;
     border: solid 1px #cccccc;
-    width: 20px;
-    height: 20px;
+    width: 21px;
+    height: 21px;
     margin-right: 10px;
     vertical-align: text-bottom;
   }
