--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -6,3 +6,7 @@
 @import '_misc/blocks';
 @import 'pages/start';
 @import 'pages/works';
+@import 'pages/about';
+@import 'pages/blog';
+@import 'common/footer';
+@import 'common/header';
