--- a/source/template/_template.pug
+++ b/source/template/_template.pug
@@ -16,6 +16,7 @@ html
 
     link(rel='stylesheet' href='/assets/css/foundation.css')
     link(rel='stylesheet' href='/assets/css/app.css')
+    script(src="//api-maps.yandex.ru/2.0/?load=package.standard&lang=ru-RU" type="text/javascript" defer)
     script(src='/assets/js/foundation.js' defer)
     script(src='/assets/js/app.js' defer)
 
