--- a/source/template/common/welcome.pug
+++ b/source/template/common/welcome.pug
@@ -14,5 +14,5 @@
 
     .start__btns
         a(href='works.html').start__btn Мои работы
-        a(href='#').start__btn Обо мне
-        a(href='#').start__btn Блог
+        a(href='about.html').start__btn Обо мне
+        a(href='blog.html').start__btn Блог
