--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -100,6 +100,27 @@ block content
                                 circle(r="16" cx="16" cy="16" stroke-dasharray="40 100").circle-diagrams
                             .skill__title Bower
 
-        .map
+        .map#map
+            .map__contact
+                .title-medium.title-dashes Контакты
+                ul.map__contact-list
+                    li.map__contact-item
+                        i(class="fa fa-skype" aria-hidden="true")
+                        | boyurartem
+
+                    li.map__contact-item
+                        i(class="fa fa-envelope" aria-hidden="true")
+                        | gboyur@gmail.com
+
+                    li.map__contact-item
+                        i(class="fa fa-phone" aria-hidden="true")
+                        | +7 928 260 10 42
+
+                    li.map__contact-item
+                        i(class="fa fa-map-marker" aria-hidden="true")
+                        | г.Новороссийск, ул.Видова, д.176а
+
+
+
 
         include ../common/footer
