--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -5,7 +5,7 @@ block variables
 
 block content
   .wrapper-start
-      include ../common/_authorization
-      include ../common/_welcome
+      include ../common/authorization
+      include ../common/welcome
 
   a(href='#').auth-btn#auth_btn Авторизоваться
