--- a/source/style/_misc/adjustment.scss
+++ b/source/style/_misc/adjustment.scss
@@ -22,3 +22,16 @@ input {
   overflow: hidden;
   position: relative;
 }
+
+.clearfix:before,  .clearfix:after {
+  content: "";
+  display: table;
+}
+
+.clearfix:after {
+  clear: both;
+}
+
+.clear {
+  clear: both;
+}
