--- a/source/template/pages/works.pug
+++ b/source/template/pages/works.pug
@@ -6,84 +6,69 @@ block variables
 block content
     .wrapper
         header.header
-            .header__top
-                .social.social--header
-                    a(href='#')
-                        i(class="fa fa-vk" aria-hidden="true")
-                    a(href='#')
-                        i(class="fa fa-github-alt" aria-hidden="true")
-                    a(href='#')
-                        i(class="fa fa-linkedin-square" aria-hidden="true")
-                .header__menu
-                    include ../../icons/hamburger.svg
-
-            .header__main
-                .header__title
-                    .title-dashes__bg
-                        include ../../icons/portfolio_header.svg
-                    .user__info.title--bg
-                        .user__avatar
-                            img.user__avatar-img(src="assets/img/welcome/avatar.jpg")
-                        .user__title Артем Боюр
-                        .user__text Личный сайт веб разработчика
+            include ../common/header
 
             .header__triangle
                 .header__triangle-svg
-                    include ../../images/triangle.svg
-                .big__title.big__title--color
-                    .title-dashes__bg
-                        include ../../icons/works_header.svg
-                    .title-dashes.title--bg Мои работы
+                    include ../../icons/triangle.svg
                 .arrow-down-little
                     include ../../icons/arrow_down.svg
 
+        .works
+            .works__title
+                .big__title
+                    .title-dashes__bg
+                        include ../../icons/works_header.svg
+                    .title-dashes.title--bg Мои работы
 
-        .slider
-            .slider__content
-                .slider__content-main
-                    .title-medium.title-dashes.title-dashes--double Сайт школы онлайн Образования
-                    .slider__content-technologies HTML , CSS, JAVASCRIPT
-                    a(href='#')
-                        button.btn-website
-                            i(class="fa fa-link" aria-hidden="true")
-                            | Посмотреть сайт
 
-            .slider__img
-                .slider__img-top
-                    img(src="assets/img/works/work-1.png")
-                .slider__img-left
-                    img(src="assets/img/works/work-2.png")
-                .slider__img-right
-                    img(src="assets/img/works/work-3.png")
 
-        .about
+            .slider
+                .slider__content
+                    .slider__content-main
+                        .title-medium.title-dashes.title-dashes--double Сайт школы онлайн Образования
+                        .slider__content-technologies HTML , CSS, JAVASCRIPT
+                        a(href='#')
+                            button.btn-website
+                                i(class="fa fa-link" aria-hidden="true")
+                                | Посмотреть сайт
+
+                .slider__img
+                    .slider__img-top
+                        img(src="assets/img/works/work-1.png")
+                    .slider__img-left
+                        img(src="assets/img/works/work-2.png")
+                    .slider__img-right
+                        img(src="assets/img/works/work-3.png")
+
+        .about-talk
             .big__title
                 .title-dashes__bg
                     include ../../icons/about_header.svg
                 .title-dashes.title--bg.title-dashes--double Что обо мне говорят
 
-            .about__comment
-                .about__comment-block
-                    .about__comment-text.
+            .about-talk__comment
+                .about-talk__comment-block
+                    .about-talk__comment-text.
                         Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний!
-                    .about__comment-author
+                    .about-talk__comment-author
                         .user__avatar.user__avatar--comment
                             img.user__avatar-img(src="assets/img/welcome/avatar.jpg")
-                        .about__comment-name
-                            .about__comment-fio Ковальчук Дмитрий
-                                .about__comment-description основатель Loftschool
+                        .about-talk__comment-name
+                            .about-talk__comment-fio Ковальчук Дмитрий
+                                .about-talk__comment-description основатель Loftschool
 
-                .about__comment-block
-                    .about__comment-text.
+                .about-talk__comment-block
+                    .about-talk__comment-text.
                         Этот код выдержет любые испытания. Только пожалуйста, не загружается сайт на слишком старых браузерах!
-                    .about__comment-author
+                    .about-talk__comment-author
                         .user__avatar.user__avatar--comment
                             img.user__avatar-img(src="assets/img/welcome/avatar.jpg")
-                        .about__comment-name
-                            .about__comment-fio Зар Захаров
-                            .about__comment-description преподаватель
+                        .about-talk__comment-name
+                            .about-talk__comment-fio Зар Захаров
+                            .about-talk__comment-description преподаватель
 
-            .about__contact
+            .about-talk__contact
                 .title-medium.title-dashes Связаться со мной
                 form
                     input(type="text").contact-input
@@ -92,10 +77,5 @@ block content
                 .start__btns
                     a(href='#').start__btn Отправить
                     a(href='#').start__btn Очистить
-        .footer
-            .footer__top
-                .footer__top-left
-                .footer__top-right
-            .footer__buttom
-                .footer__buttom-left
-                .footer__buttom-right
+
+        include ../common/footer
