fix start page and authorization

--- a/source/style/_misc/blocks.scss
+++ b/source/style/_misc/blocks.scss
@@ -97,6 +97,13 @@
   }
 }
 
+.title-dashes--white {
+
+  &:after, &:before {
+    background-color: #fff;
+  }
+}
+
 .title-dashes__bg {
   display: inline-block;
   position: relative;
