--- a/source/template/common/authorization.pug
+++ b/source/template/common/authorization.pug
@@ -1,11 +1,13 @@
 .authorization#auth_block
-  .authorization__title.title-dashes Авторизуйтесь
-  .authorization__login
-    .login__icon
+  .title-medium.title-dashes Авторизуйтесь
+
+  .authorization__input
+    .authorization__icon
       i(class="fa fa-user" aria-hidden="true")
     input(type="text").login__input
-  .authorization__pass
-    .pass__icon
+
+  .authorization__input
+    .authorization__icon
       i(class="fa fa-key" aria-hidden="true")
     input(type="password").pass__input
 
