--- a/source/template/pages/blog.pug
+++ b/source/template/pages/blog.pug
@@ -24,7 +24,7 @@ block content
                     .big__title.title--blog
                         .title-dashes__bg
                             include ../../icons/blog_header.svg
-                        .title-dashes.title--bg Блог
+                        .title-dashes.title-dashes--white.title--bg.title--bg-blog Блог
 
             .header__triangle
                 .header__triangle-svg
