--- a/source/style/common/authorization.scss
+++ b/source/style/common/authorization.scss
@@ -4,7 +4,7 @@
   transform: scaleX(0);
 }
 
-.authorization__input {
+.authorization__item {
   position: relative;
   width: 340px;
   height: 45px;
@@ -36,7 +36,7 @@
   transition: color 0.5s;
 }
 
-.login__input, .pass__input {
+.authorization__input {
   box-sizing: border-box;
   position: absolute;
   display: inline-block;
@@ -51,6 +51,10 @@
 
   &:focus, &:hover {
     border-color: #00bfa5;
+  }
+
+  &::-webkit-input-placeholder {
+    color: rgba(55, 62, 66, 0.5);
   }
 }
 
