--- a/source/style/common/header.scss
+++ b/source/style/common/header.scss
@@ -46,7 +46,16 @@
   top: 20px;
   opacity: 0.7;
 
-  &:hover {
-    opacity: 1;
+  svg {
+    padding: 50px;
+    transition: opacity 0.5s, transform 0.5s;
+
+    &:hover {
+      opacity: 1;
+      cursor: pointer;
+      transform: scale(1.5);
+    }
   }
+
+
 }
