--- a/source/style/common/welcome.scss
+++ b/source/style/common/welcome.scss
@@ -25,6 +25,8 @@
   }
 }
 
+
+
 .social--header {
   padding: 30px 0 0;
   max-width: 50%;
@@ -35,7 +37,7 @@
     color: #fff;
     opacity: 0.5;
 
-    &:active {
+    &:visited {
       color: #fff;
     }
 
@@ -58,6 +60,10 @@
       color: #fff;
     }
 
+    &:visited {
+      color: #fff;
+    }
+
     &:hover {
       opacity: 1;
     }
@@ -70,6 +76,6 @@
     padding: 5px;
     border-radius: 50%;
     text-align: center;
-    line-height: 26px;
+    line-height: 24px;
   }
 }
