--- a/source/style/_misc/blocks.scss
+++ b/source/style/_misc/blocks.scss
@@ -130,7 +130,6 @@
   transform: translate(-50%, -90%);
 }
 
-
 .title--blog {
   color: white;
   display: block;
@@ -139,4 +138,88 @@
 
 .title-dashes--double {
   width: 300px;
+}
+
+// Social
+.welcome__social, .social {
+  padding: 30px 0 0;
+  font-family: fontawesomeregular, serif;
+  font-size: 28px;
+
+  a {
+    text-decoration: none;
+    transition: 0.5s;
+    color: #00bfa5;
+    opacity: 0.5;
+    padding: 15px;
+
+    &:visited {
+      color: #00bfa5;
+    }
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+}
+
+
+
+.social--header {
+  padding: 30px 0 0;
+  max-width: 50%;
+  float: left;
+  margin-left: 15px;
+
+  a {
+    color: #fff;
+    opacity: 0.5;
+
+    &:visited {
+      color: #fff;
+    }
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+}
+
+.social--footer {
+  padding: 0;
+  font-size: 22px;
+
+  a {
+    color: #fff;
+    opacity: 0.5;
+    padding: 5px;
+
+    &:active {
+      color: #fff;
+    }
+
+    &:visited {
+      color: #fff;
+    }
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+
+  i {
+    height: 24px;
+    width: 24px;
+    border: 1px solid white;
+    padding: 5px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 24px;
+    transition: color 0.5s, background 0.5s;
+
+    &:hover {
+      background: #fff;
+      color: #373e42;
+    }
+  }
 }
