--- a/source/style/common/footer.scss
+++ b/source/style/common/footer.scss
@@ -31,14 +31,20 @@
   vertical-align: middle;
   font-size: 1rem;
 
+
   li {
     padding-right: 35px;
     display: inline-block;
   }
 
   a {
+    transition: color 0.5s;
     text-decoration: none;
     color: white;
+
+    &:hover {
+      color: #00BFA5;
+    }
 
   }
 
