--- a/source/style/pages/start.scss
+++ b/source/style/pages/start.scss
@@ -20,6 +20,11 @@
   }
 }
 
+.welcome {
+  transition: 0.5s;
+  transform: scaleX(1);
+}
+
 .welcome, .authorization {
   display: inline-block;
   vertical-align: middle;
@@ -104,5 +109,4 @@
   margin-bottom: 30px;
 }
 
-@import './common/welcome';
 @import './common/authorization';
