--- a/source/template/_template.pug
+++ b/source/template/_template.pug
@@ -14,8 +14,7 @@ html
     //- favicon block start
     //- favicon block end
 
-    link(rel='stylesheet' href='/assets/css/foundation.css')
-    link(rel='stylesheet' href='/assets/css/app.css')
+    link(rel='stylesheet' href='/assets/css/style.min.css')
     script(src="//api-maps.yandex.ru/2.0/?load=package.standard&lang=ru-RU" type="text/javascript" defer)
     script(src='/assets/js/foundation.js' defer)
     script(src='/assets/js/app.js' defer)
