--- a/source/style/_misc/blocks.pcss
+++ b/source/style/_misc/blocks.pcss
@@ -1,4 +1,3 @@
-// User info
 .user__avatar {
   display: inline-block;
   height: 140px;
@@ -140,17 +139,16 @@
   width: 300px;
 }
 
-// Social
 .welcome__social, .social {
   padding: 30px 0 0;
-  font-family: fontawesomeregular, serif;
+  font-family: FontAwesome, serif;
   font-size: 28px;
 
   a {
     text-decoration: none;
-    transition: 0.5s;
+    transition: .5s;
     color: #00bfa5;
-    opacity: 0.5;
+    opacity: .5;
     padding: 15px;
 
     &:visited {
@@ -162,8 +160,6 @@
     }
   }
 }
-
-
 
 .social--header {
   padding: 30px 0 0;
