--- a/source/style/common/header.pcss
+++ b/source/style/common/header.pcss
@@ -1,7 +1,7 @@
 .header {
   position: relative;
   text-align: center;
-  background: url("../img/bg_pages.jpg") 50%;
+  background: url('../img/bg_pages.jpg') 50%;
   background-size: cover;
   height: 100vh;
 }
