--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -7,6 +7,7 @@ block content
   .wrapper-start
       include ../common/authorization
       include ../common/welcome
-      footer.footer-start © Артем Боюр | создано с любовью в LoftSchool | 2016
+      footer.footer-start
+          .footer-start__content © Артем Боюр | создано с любовью в LoftSchool | 2016
 
   a(href='#').auth-btn#auth_btn Авторизоваться
