--- a/source/template/common/welcome.pug
+++ b/source/template/common/welcome.pug
@@ -1,16 +1,17 @@
 .welcome#welcome_block
-    .user__avatar
-        img.user__avatar-img(src="assets/img/welcome/avatar.jpg")
-    .user__title.user__title--black Артем Боюр
-    .user__text.user__text--black Личный сайт веб разработчика
+    .welcome__main
+        .user__avatar
+            img.user__avatar-img(src="assets/img/welcome/avatar.jpg")
+        .user__title.user__title--black Артем Боюр
+        .user__text.user__text--black Личный сайт веб разработчика
 
-    .welcome__social
-        a(href='#')
-            i(class="fa fa-vk" aria-hidden="true")
-        a(href='#')
-            i(class="fa fa-github-alt" aria-hidden="true")
-        a(href='#')
-            i(class="fa fa-linkedin-square" aria-hidden="true")
+        .welcome__social
+            a(href='#')
+                i(class="fa fa-vk" aria-hidden="true")
+            a(href='#')
+                i(class="fa fa-github-alt" aria-hidden="true")
+            a(href='#')
+                i(class="fa fa-linkedin-square" aria-hidden="true")
 
     .start__btns
         a(href='works.html').start__btn Мои работы
