all pages migration to PostCSS

--- a/source/style/app.pcss
+++ b/source/style/app.pcss
@@ -5,5 +5,10 @@
 @import "_misc/stylesheet.pcss";
 @import "_misc/blocks.pcss";
 
+@import 'common/header.pcss';
+@import 'common/footer.pcss';
+
 @import 'pages/start.pcss';
-@import 'common/authorization.pcss';
+@import 'pages/works.pcss';
+@import 'pages/about.pcss';
+@import 'pages/blog.pcss';
