--- a/source/template/common/header.pug
+++ b/source/template/common/header.pug
@@ -11,7 +11,7 @@
 
 .header__main
     .header__title
-        .title-dashes__bg
+        .title-dashes__bg.title-dashes__bg--auto
             include ../../icons/portfolio_header.svg
         .user__info.title--bg
             .user__avatar
