--- a/source/template/pages/works.pug
+++ b/source/template/pages/works.pug
@@ -35,6 +35,16 @@ block content
                 .slider__img
                     .slider__img-top
                         img(src="assets/img/works/work-1.png")
+
+                    .slider__content.slider__content--mobile
+                        .slider__content-main
+                            .title-medium.title-dashes.title-dashes--double Сайт школы онлайн Образования
+                            .slider__content-technologies HTML , CSS, JAVASCRIPT
+                            a(href='#')
+                                button.btn-website
+                                    i(class="fa fa-link" aria-hidden="true")
+                                    | Посмотреть сайт
+
                     .slider__img-left
                         img(src="assets/img/works/work-2.png")
                     .slider__img-right
