--- a/source/style/common/footer.pcss
+++ b/source/style/common/footer.pcss
@@ -19,10 +19,18 @@
   padding: 12px 30px;
   color: rgba(255, 255, 255, 0.5);
   line-height: 1.5;
+
+  @media (--mobile) {
+    display: none;
+  }
 }
 
 .footer__top {
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+
+  @media (--mobile) {
+    border: none;
+  }
 }
 
 .footer__top-left {
@@ -48,6 +56,18 @@
 
   }
 
+  @media (--tablet) {
+    text-align: center;
+    width: auto;
+    display: block;
+  }
+
+  @media (--mobile) {
+    text-align: center;
+    width: auto;
+    display: block;
+  }
+
 }
 
 .footer__top-right {
@@ -56,6 +76,17 @@
   vertical-align: middle;
   text-align: right;
   font-size: 1rem;
+
+  @media (--tablet) {
+    text-align: center;
+    width: auto;
+    display: block;
+    padding-top: 20px;
+  }
+
+  @media (--mobile) {
+    display: none;
+  }
 }
 
 .footer__buttom-left {
@@ -64,6 +95,13 @@
   vertical-align: middle;
   text-align: left;
   font-size: 1rem;
+
+  @media (--tablet) {
+    text-align: center;
+    width: auto;
+    display: block;
+
+  }
 }
 
 .footer__buttom-right {
@@ -72,4 +110,11 @@
   text-align: right;
   vertical-align: middle;
   font-size: 1rem;
+
+  @media (--tablet) {
+    text-align: center;
+    width: auto;
+    display: block;
+    padding-top: 20px;
+  }
 }
