--- a/source/template/_template.pug
+++ b/source/template/_template.pug
@@ -15,9 +15,11 @@ html
     //- favicon block end
 
     link(rel='stylesheet' href='/assets/css/style.min.css')
-    script(src="//api-maps.yandex.ru/2.0/?load=package.standard&lang=ru-RU" type="text/javascript" defer)
+    //script(src="//api-maps.yandex.ru/2.0/?load=package.standard&lang=ru-RU" type="text/javascript" defer)
     script(src='/assets/js/foundation.js' defer)
     script(src='/assets/js/app.js' defer)
+    script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBluTHs8Pa9TV-f7951IqQNzOM2H6X-HRU&callback=initMap" async defer)
+
 
     <!--[if lt IE 9]>
     script(src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js")
