--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -100,7 +100,8 @@ block content
                                 circle(r="16" cx="16" cy="16" stroke-dasharray="40 100").circle-diagrams
                             .skill__title Bower
 
-        .map#map
+        .map
+            .map__api#map
             .map__contact
                 .title-medium.title-dashes Контакты
                 ul.map__contact-list
