--- a/source/style/_misc/blocks.pcss
+++ b/source/style/_misc/blocks.pcss
@@ -61,7 +61,7 @@
     font-size: 50px;
   }
 
-  @media (--tablet) {
+  @media (--mobile) {
     font-size: 35px;
   }
 
@@ -75,12 +75,22 @@
   line-height: 1.2;
   text-align: center;
   color: #455a64;
+
+  @media (--mobile) {
+    font-size: 21px;
+  }
 }
 
 .title-medium--about {
   position: absolute;
   width: 40%;
   top: 0;
+
+  @media (--display-medium) {
+    position: relative;
+    width: 100%;
+    text-align: center;
+  }
 }
 
 .title-dashes {
