--- a/source/style/pages/about.pcss
+++ b/source/style/pages/about.pcss
@@ -1,6 +1,10 @@
 .about {
   position: relative;
   height: 100vh;
+
+  @media (--tablet) {
+    height: auto;
+  }
 }
 
 .about__left {
@@ -11,6 +15,15 @@
   float: left;
   padding: 20px 40px;
   background: #F0EFE9;
+
+  @media (--tablet) {
+    float: none;
+    width: 100%;
+  }
+
+  @media (--mobile) {
+    padding: 20px 10px;
+  }
 }
 
 .about__right {
@@ -21,23 +34,45 @@
   padding: 20px 40px;
   background: #EFEBE0;
   text-align: center;
+
+  @media (--display-medium) {
+    padding: 20px 10px 20px 40px;
+  }
+
+  @media (--tablet) {
+    float: none;
+    padding: 20px;
+    width: 100%;
+  }
+
+  @media (--mobile) {
+    padding: 20px 10px;
+  }
 }
 
 .about__me {
   width: 50%;
   float: right;
   text-align: center;
+
+  @media (--display-medium) {
+    float: none;
+    width: 100%;
+  }
 }
 
 .about__me-img {
+  display: block;
   width: 90%;
-  margin-bottom: 30px;
+  max-width: 440px;
+  margin: 30px auto;
 }
 
 .about__text {
-  margin: 30px 0;
+  max-width: 440px;
   text-align: left;
   line-height: 1.5;
+  margin: 30px auto;
 }
 
 .skills {
@@ -46,6 +81,10 @@
 
 .skill__row {
   margin-bottom: 20px;
+
+  @media (--tablet) {
+    text-align: center;
+  }
 }
 
 .skill__row-title {
@@ -59,12 +98,22 @@
   position: relative;
   margin-right: 30px;
   text-align: center;
+  transition: wight .5s, height .5s;
+
   svg {
-    width: 120px;
-    height: 120px;
+    size: 120px;
     transform: rotate(-90deg);
     background: transparent;
     border-radius: 50%;
+  }
+
+  @media (--display-medium) {
+    svg {
+      size: 110px;
+    }
+
+    margin-right: 25px;
+
   }
 }
 
@@ -96,6 +145,12 @@
   height: 100vh;
 }
 
+.map__api {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
 .map__contact {
   box-sizing: border-box;
   position: absolute;
@@ -105,7 +160,6 @@
   background-color: rgba(252, 252, 252, 0.85);
   top: 50%;
   left: 50%;
-  z-index: 2;
   text-align: center;
   transform: translate(-50%, -80%);
 }
