--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -14,7 +14,7 @@ block content
                 .arrow-down-little
                     include ../../icons/arrow_down.svg
 
-        .about
+        .about.clearfix
             .about__left
                 .big__title.title-medium--about
                     .title-dashes__bg.title-dashes__bg--medium
