new color google map

--- a/source/style/pages/about.pcss
+++ b/source/style/pages/about.pcss
@@ -164,7 +164,8 @@
   display: inline-block;
   width: 380px;
   padding: 20px;
-  background-color: rgba(252, 252, 252, 0.85);
+  border-radius: 5px;
+  background-color: rgba(252, 252, 252, 0.90);
   top: 50%;
   left: 50%;
   text-align: center;
