add slider and delete all jQuery

--- a/source/style/pages/start.pcss
+++ b/source/style/pages/start.pcss
@@ -258,7 +258,7 @@
   font-size: 16px;
   line-height: 20px;
   text-align: center;
-  color: rgba(69, 90, 100, 0.8);
+  color: rgba(69, 90, 100, .8);
 
   label:before {
     font-family: FontAwesome, serif;
