--- a/source/style/pages/works.pcss
+++ b/source/style/pages/works.pcss
@@ -17,61 +17,24 @@
 }
 
 .slider {
+  display: block;
+  width: 100%;
   height: 100vh;
 }
 
-.slider__content, .slider__img {
-  display: block;
-  width: 50%;
-  height: 100%;
-  background-color: #f0efe9;
-}
-
 .slider__content {
+  display: flex;
   float: left;
-  position: relative;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  height: inherit;
   background-color: #f0efe9;
-  text-align: center;
-
-  @media (--tablet) {
-    display: none;
-  }
-}
-
-.slider__content--mobile {
-  display: none;
-  width: 100%;
-  height: 25%;
-
-  @media (--tablet) {
-    display: block;
-    position: relative;
-    text-align: center;
-
-    .slider__content-main {
-      position: relative;
-      top: auto;
-      transform: none;
-    }
-  }
-}
-
-.slider__img {
-  float: right;
-
-  @media (--tablet) {
-    float: none;
-    width: auto;
-    height: 100vh;
-  }
 }
 
 .slider__content-main {
-  display: inline-block;
-  position: absolute;
-  width: 420px;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  display: flex;
+  flex-flow: column;
 }
 
 .slider__content-technologies {
@@ -80,6 +43,10 @@
   padding: 15px 0;
   border-top: 1px rgba(0, 150, 136, 0.30) solid;
   border-bottom: 1px rgba(0, 150, 136, 0.30) solid;
+}
+
+.btn-website-link {
+  margin: auto;
 }
 
 .btn-website {
@@ -101,43 +68,65 @@
   }
 }
 
+
 .slider__img {
-  background-color: #efebe0;
-}
-
-.slider__img-top {
-  width: 100%;
-  height: 70%;
-  text-align: center;
-  background-color: #efebe0;
-
-  img {
-    max-height: 90%;
-    padding: 5%;
-  }
-
-  @media (--tablet) {
-    height: 50%;
-  }
-
-}
-
-.slider__img-left {
+  display: flex;
   position: relative;
-  float: left;
-  width: 50%;
+  height: 70%;
+  align-items: center;
+  justify-content: center;
+  background-color: #efebe0;
+}
+
+.display__button {
+  display: flex;
   height: 30%;
+}
+
+.slider__button-down, .slider__button-up {
+  display: flex;
+  position: relative;
+  width: 50%;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.slider__button-img {
+  box-sizing: border-box;
+  position: absolute;
+  max-width: 100%;
+  max-height: 100%;
+  padding: 5%;
+  top: -100%;
+  transition: top .5s ease-in-out;
+}
+
+.slider__slide-img {
+  box-sizing: border-box;
+  position: absolute;
+  max-width: 100%;
+  max-height: 100%;
+  padding: 5%;
+  top: 0;
+  opacity: 0;
+  transition: top .5s ease-in-out, opacity .5s ease-in-out;
+}
+
+.slider__button-img--up {
+  top: 100%;
+}
+
+.active {
+  top: 0;
+}
+
+.active-slide {
+  opacity: 1;
+}
+
+.slider__button-down {
   background-color: #f1ede1;
-  text-align: center;
-
-  @media (--tablet) {
-    height: 25%;
-  }
-
-  img {
-    max-height: 95%;
-    padding: 2%;
-  }
 
   &:before {
     content: " ";
@@ -160,34 +149,20 @@
     vertical-align: middle;
     transform: translate(-50%, -50%);
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.16);
-    transition: text-shadow 0.5s;
+    transition: text-shadow 0.5s, font-size 0.3s;
   }
 
   &:hover {
     cursor: pointer;
     &:after {
       text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+      font-size: 90px;
     }
   }
 }
 
-.slider__img-right {
-  position: relative;
-  float: right;
-  width: 50%;
-  height: 30%;
+.slider__button-up {
   background-color: #e3ded0;
-  text-align: center;
-
-  @media (--tablet) {
-    height: 25%;
-  }
-
-  img {
-    max-height: 95%;
-    padding: 2%;
-  }
-
   &:before {
     content: " ";
     position: absolute;
@@ -209,15 +184,42 @@
     vertical-align: middle;
     transform: translate(-50%, -50%);
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.16);
-    transition: text-shadow 0.5s;
+    transition: text-shadow 0.5s, font-size 0.3s;
   }
 
   &:hover {
     cursor: pointer;
     &:after {
       text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+      font-size: 90px;
     }
   }
+}
+
+@media screen and (max-width: 1200px) {
+  .slider {
+    display: flex;
+    flex-flow: row wrap;
+    height: 100vh;
+  }
+
+  .slider__content {
+    float: none;
+    width: 100%;
+    height: 35%;
+  }
+
+  .slider__img {
+    width: inherit;
+    height: 35%;
+    order: -1;
+  }
+
+  .display__button {
+    width: inherit;
+    height: 30%;
+  }
+
 }
 
 .about-talk {
