--- a/source/style/pages/works.pcss
+++ b/source/style/pages/works.pcss
@@ -33,8 +33,8 @@
 }
 
 .slider__content-main {
-  display: flex;
-  flex-flow: column;
+  display: inline-block;
+  text-align: center;
 }
 
 .slider__content-technologies {
