--- a/source/template/pages/works.pug
+++ b/source/template/pages/works.pug
@@ -25,7 +25,7 @@ block content
             #slider.slider
                 .slider__content
                     #content.slider__content-main
-                        .title-medium.title-dashes.title-dashes--double Сайт школы онлайн Образования
+                        .title-medium.title-dashes Сайт школы онлайн Образования
                         .slider__content-technologies HTML, CSS, JAVASCRIPT
                         a(href='#').btn-website-link
                             button.btn-website
